# geoxidated-ui

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE-MIT  README.md  index.html  index.html.old
src/: app.rs  main.rs
src/app/: client.rs  map.rs  ui.rs
static/js/: map.js
