[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming", "gis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasm-bindgen = "0.2.89"
yew = { version="0.20", features=["csr"] }
# hyper = { version = "1", features = ["full"] }
# tokio = { version = "1", features = ["full"] }
# http-body-util = "0.1"
# hyper-util = { version = "0.1", features = ["full"] }
wasm-bindgen-futures = "0.4.39"
js-sys = "0.3.66"
futures = "0.3.29"
gloo = "0.11.0"
serde-wasm-bindgen = "0.6.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "HtmlBodyElement",
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response'  
]
