[package]
name = "geoxidated-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-web = "0.4.3"
log = "0.4.20"
serde = "1.0.193"
wasm-logger = "0.2.0"
futures = "0.3.29"
serde_json = "1.0.110"
reqwest = "0.11.23"
